syntax = "proto3";
package kratos.api;

option go_package = "app/client/service/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Trace trace = 1;
  Server server = 2;
  Data data = 3;
}

message Trace {
  string endpoint = 1;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message TLS {
    string caCertFile = 1;
    string certFile = 3;
    string keyFile = 4;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  TLS tls = 3;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  Database database = 1;
}